# AndroidNavigationDemo

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/oz/test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/oz/test/: MainActivity.java  MainApplication.java
app/src/main/java/org/oz/test/base/: BaseFragment.java  BindingFragment.java  ControllerNavBindingFragment.java  NavBindingFragment.java
app/src/main/java/org/oz/test/base/contract/: IModel.java  IView.java
app/src/main/java/org/oz/test/base/controller/: BaseController.java
app/src/main/java/org/oz/test/databinding/: IBinding.java
app/src/main/java/org/oz/test/databinding/adpater/: ViewAdpater.java
app/src/main/java/org/oz/test/databinding/conversion/: DrawableConversion.java
app/src/main/java/org/oz/test/map/: IMapService.java  MapServiceImpl.java
app/src/main/java/org/oz/test/ui/: MainContract.java  MainFragment.java  MainViewModel.java
app/src/main/java/org/oz/test/ui/av/: AVContract.java  AVController.java  AVFragment.java  AvViewModel.java
app/src/main/java/org/oz/test/util/: QRCodeUtils.java
app/src/main/java/org/oz/test/widgets/: DecorativeAdapter.java
app/src/main/res/drawable/: bg_round.xml  fg_ripple.xml
app/src/main/res/layout/: activity_main.xml  av_fragment.xml  bluetooth_fragment.xml  fragment_main.xml  item_choice.xml  item_choice_chip.xml  map_fragment.xml  pop_choice_filter.xml  pop_choice_filter2.xml  printer_fragment.xml  rfid_fragment.xml
app/src/main/res/menu/: navigation.xml
app/src/main/res/navigation/: nav_main.xml
app/src/main/res/values/: dimens.xml  strings.xml
app2/: build.gradle
app2/src/main/: AndroidManifest.xml
app2/src/main/java/org/oz/test/: MainActivity.java
app2/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
map/: build.gradle  proguard-rules.pro
map/src/androidTest/java/com/map/amap/: ExampleInstrumentedTest.java
map/src/main/: AndroidManifest.xml
map/src/main/java/com/map/: ILifeCycle.java  IMap.java  Map.java  MapFragment.java  Platform.java  Test.java
map/src/main/java/com/map/amap/: AMapFragment.java  AMapView.java
map/src/main/java/com/map/amap/helper/: AMapHelper.java  PathSmoothTool.java
map/src/main/java/com/map/amap/impl/: AMapDraw.java  AMapLocation.java  AMapSearch.java  AMapStyle.java
map/src/main/java/com/map/amap/utils/: LatlngUtils.java  ToUtils.java
map/src/main/java/com/map/base/: BaseFragment.java  BaseMapView.java
map/src/main/java/com/map/bmap/: BMapFragment.java  BMapView.java
map/src/main/java/com/map/bmap/impl/: BMapDraw.java  BMapLocation.java  BMapSearch.java  BMapStyle.java
map/src/main/java/com/map/constant/: MapResult.java  MapType.java  PoiSearchType.java
map/src/main/java/com/map/entity/: Address.java  IndoorData.java  LatLngPoint.java  Location.java  MyLatLng.java  Photo.java  PoiItem.java  PoiItemExtension.java  SubPoiItem.java  Tip.java
map/src/main/java/com/map/feature/: IMapDraw.java  IMapLocation.java  IMapSearch.java  IMapStyle.java  MapType.java  OnKeyTipsListener.java  OnLocationChangeListener.java  OnPinPointListener.java  OnPoiSearchListener.java  OnRegeocodeSearchListener.java
map/src/main/java/com/map/helper/: AMapHelper.java  PathSmoothTool.java
map/src/main/java/com/map/impl/: AMap.java  AMapImpl.java  BMap.java  BMapImpl.java
map/src/main/res/layout/: fragment_amap.xml
map/src/main/res/values/: strings.xml
map/src/test/java/com/map/amap/: ExampleUnitTest.java
ntv/: build.gradle
ntv/src/androidTest/java/org/oz/ntv/: ExampleInstrumentedTest.java
ntv/src/main/: AndroidManifest.xml
ntv/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ntv/src/main/cpp/utils/: log.h
ntv/src/main/java/org/oz/ntv/: CodecHelper.java
ntv/src/main/res/values/: strings.xml
ntv/src/test/java/org/oz/ntv/: ExampleUnitTest.java
(+17 files in other folders)
